--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <span class="Letter">L</span>
         <span class="Letter">L</span>
         <span class="Letter">O</span>
-    </h1>        
+    </h1>  
+    <script src="app.js"></script>      
 </body>
 </html>
