--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Colors</title>
+    <link rel="stylesheet" href="app.css">
+    <link href="https://fonts.googleapis.com/css?family+Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>
@@ -12,6 +14,7 @@
         <span class="Letter">L</span>
         <span class="Letter">L</span>
         <span class="Letter">O</span>
+        <span class="Letter">!</span>
     </h1>  
     <script src="app.js"></script>      
 </body>
